--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -34,12 +34,11 @@ android {
 }
 
 dependencies {
-    compile(name: 'JoybudzLib', ext: 'aar')
-    compile(name: 'FastBleLib', ext: 'aar')
+    compile(name: 'joybudzaar', ext: 'aar')
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
+	implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
